# COD-DataAnalysis

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backfill.yml  ci.yml  ingest-nightly.yml
analytics/: pyproject.toml
analytics/src/cdlhub_analytics/: __init__.py  backtest.py  cohort.py  db.py  era.py  insights.py  insights_metrics.py  maprows.py  metrics.py  regress.py  run_all.py  writeback.py
analytics/src/cdlhub_analytics/ratings/: __init__.py  comparison.py  elo.py  fit.py  glicko2.py  player_rating.py  winprob.py
analytics/tests/: test_backtest.py  test_era.py  test_insights.py  test_insights_metrics.py  test_metrics.py  test_phase_b.py  test_player_rating.py  test_ratings.py  test_regress.py  test_winprob.py
db/: migrate.sh  seed.sh
db/migrations/: 0001_init.sql  0002_gps_extras.sql  0003_analytics.sql  0004_model_artifacts.sql  0005_metric_layer.sql  0006_events.sql  0007_kill_feed_recon.sql
db/seeds/: 0001_reference.sql  0002_orgs_players.sql  (+2 more)
docs/: methodology.md
pipeline/: pyproject.toml
pipeline/scripts/: fetch_structured.py
pipeline/snapshots/cwl-structured/: README.md
pipeline/src/cdlhub_pipeline/: __init__.py  aliases.json  eras.py  identity.py  models.py  quality.py
pipeline/src/cdlhub_pipeline/cwl_archive/: __init__.py  __main__.py  load.py  manifest.py  parse.py
pipeline/src/cdlhub_pipeline/cwl_structured/: __init__.py  __main__.py  load.py  schema_probe.py
pipeline/tests/: test_cwl_archive.py  test_eras.py  test_models.py
web/: drizzle.config.ts  package-lock.json  package.json
(+37 files in other folders)
